bugs 2.5